2008-04-26  Stefan Monnier  <monnier@iro.umontreal.ca>

	* minibuffer.el (completion-table-with-context): Fix `pred' for the
	various kinds of completion tables.
	(completion-emacs22-try-completion): Place cursor after the /, as was
	done in Emacs-22's minibuffer-complete-word.
	Fix bug reported by David Hansen <david.hansen@gmx.net>.
	(completion-emacs22-try-completion): Merge all mergable text rather
	than just /.
	(completion-pcm--delim-wild-regex): New var.
	(completion-pcm-word-delimiters): New custom.
	(completion-pcm--prepare-delim-re, completion-pcm--pattern-trivial-p)
	(completion-pcm--string->pattern, completion-pcm--pattern->regex)
	(completion-pcm--all-completions, completion-pcm-all-completions)
	(completion-pcm--merge-completions, completion-pcm--pattern->string)
	(completion-pcm-try-completion): New functions.
	(completion-styles-alist): Add them.
	(completion-styles): Add it to the default.

2008-04-25  Nick Roberts  <nickrob@snap.net.nz>

	* progmodes/gdb-ui.el (gud-watch): Don't create speedbar...
	(gdb-var-create-handler): ...until here when there are values.
	(gdb-post-prompt): Don't do -var-update with no watch expressions.
	(gdb-info-locals-handler): Don't match "struct {...}" as an array.

2008-04-25  Eli Zaretskii  <eliz@gnu.org>

	* ls-lisp.el (ls-lisp-format): Fix last change.
	(ls-lisp-uid-d-fmt, ls-lisp-uid-s-fmt, ls-lisp-gid-d-fmt)
	(ls-lisp-gid-s-fmt, ls-lisp-filesize-d-fmt)
	(ls-lisp-filesize-f-fmt): New defvars.
	(ls-lisp-insert-directory): Dynamically compute format specifiers
	for displaying UID, GID, and file size, and store them in the
	above variables.
	(ls-lisp-format): Use ls-lisp-filesize-f-fmt, ls-lisp-uid-s-fmt,
	ls-lisp-uid-d-fmt, ls-lisp-gid-s-fmt, and ls-lisp-gid-d-fmt
	instead of constant format strings.
	(ls-lisp-format-file-size): Use ls-lisp-filesize-f-fmt and
	ls-lisp-filesize-d-fmt instead of constant format strings.

2008-04-24  Nick Roberts  <nickrob@snap.net.nz>
